style(custom.scss): adjust footer font size and alignment for better visibility feat(images): add new images for AI-generated data comparison fix(index.qmd): update section title and enhance layout with new images for clarity

--- a/custom.scss
+++ b/custom.scss
@@ -326,11 +326,14 @@ h6 {
   // Footer styling
   .footer {
     color: $text-color;
-    font-size: 0.7em;
+    font-size: 0.3em;
+    text-align: left !important;
+    left: 0 !important;
+    padding-left: 1rem !important;
 
     a {
       color: $text-color;
-      font-size: 0.8em;
+      font-size: 0.6em;
       border-bottom: none;
       transition: color $transition-base;
 
